# general-visualizer

./: .gitignore  CMakeLists.txt  README.md  compute_face_normals.glsl  lattice.cpp  linked_list.h  linked_list.hpp  main.cpp  mesh.h  mesh.hpp  misc.cpp  opengl-framework.filters  opengl-framework.sln  opengl-framework.vcxproj  opengl-framework.vcxproj.filters  point_cloud.hpp  shader.cpp  shader.h  vertex.h  vertex.hpp
include/: camera.h  drawable.h  mesh.h  misc.h  point_cloud.h  shader.h  shapes.h  vertex.h  view_window.h
lib/header/: camera.h  drawable.h  lattice.h  linked_list.h  mesh.h  misc.h  point_cloud.h  shader.h  shapes.h  vertex.h  view_window.h
lib/module/: misc.ixx
lib/shader/: camera_projection.glsl  frag.glsl  vertex.glsl
lib/source/: camera.cpp  drawable.hpp  linked_list.hpp  main.cpp  mesh.cpp  mesh.hpp  misc.cpp  point_cloud.hpp  shader.cpp  shapes.cpp  vertex.cpp  view_window.cpp
shader/: compute_face_normals.glsl  frag.glsl  vertex.glsl
src/: camera.cpp  drawable.hpp  main.cpp  mesh.hpp  point_cloud.hpp  shader.cpp  shapes.cpp  vertex.cpp  view_window.cpp
windows/: opengl-framework.vcxproj.filters
